apps/dagobah/netbird/deploy/routing-peer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbird-router-ams
  namespace: netbird
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netbird
  template:
    metadata:
      labels:
        app: netbird
    spec:
      containers:
      - name: netbird
        image: "mirror.gcr.io/netbirdio/netbird"
        tag: 0.35.2
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
            - SYS_RESOURCE
            - SYS_ADMIN
